superuser implementation start

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -3,8 +3,9 @@
     <ul class="nav navbar-nav navbar-left">
       <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/">Home</a></li>
     </ul>
-      <ul class="nav navbar-nav navbar-right">
 
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="authService.superUser()"><a>Test</a></li>
         <li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/login">Login</a></li>
         <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/dashboard">Dashboard</a></li>
         <li *ngIf="authService.loggedIn()"><a href="#" (click)="onLogoutClick()" >Logout</a></li>
