module deletion cascade

--- a/client/src/app/components/camps/camps.component.html
+++ b/client/src/app/components/camps/camps.component.html
@@ -8,6 +8,7 @@
     <td>{{camp.name}}</td>
     <td>{{camp.admin.email}}</td>
     <td>
+      <p *ngFor="let module of camp.modules">{{module.formal}}</p>
       <button class="btn btn-primary" (click) = "showAddModule(camp)" *ngIf = "!camp.hideAdd">+</button>
       <app-module-dropdown (selectedChanged) = "preAdd($event,camp)" *ngIf = "camp.hideAdd" [campModules]="camp.modules"></app-module-dropdown>
       <button class="btn btn-primary" *ngIf = "camp.hideAdd" (click) = "addModule(camp)">Add</button>
