--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -58,12 +58,18 @@
         <th>First</th>
         <th>Last</th>
         <th>Gender</th>
+        <th>Division</th>
         <th></th>
       </tr>
       <tr *ngFor="let counselor of counselors">
         <td>{{counselor.first}}</td>
         <td>{{counselor.last}}</td>
         <td>{{counselor.gender}}</td>
+        <td *ngIf="counselor.division">{{counselor.division.name}}</td>
+        <td *ngIf="!counselor.division">
+          <app-divisions-dropdown (selectedChanged) = "preAdd($event,counselor)"></app-divisions-dropdown>
+          <button class="btn btn-primary" (click) = "addDivision(counselor)">Add</button>
+        </td>
         <td><button class="btn btn-primary" (click) = "remove(counselor)">X</button></td>
       </tr>
     </table>
