--- a/client/src/app/components/divisions/divisions.component.html
+++ b/client/src/app/components/divisions/divisions.component.html
@@ -25,18 +25,24 @@
     </div>
     
     <button class="btn btn-primary" (click) = "showAdd()" *ngIf = "!newCamp">Add</button>
+    <div *ngFor="let gender of divisions">
+      <h2 *ngIf="gender._id.gender=='male'">Boys Side</h2>
+      <h2 *ngIf="gender._id.gender=='female'">Girls Side</h2>
+      <table class="table">
+          <tr>
+            <th>Name</th>
+            <th>Leader(s)</th>
+            <th></th>
+          </tr>
+          <tr *ngFor="let division of gender.divisions">
+            <td>{{division.name}}</td>
+            <td>
+              <p *ngFor="let leader of division.leaders">{{leader.first}} {{leader.last}} <button class="btn btn-primary" (click) = "removeHead(division._id,leader._id)">X</button></p>
+              <app-head-staff-dropdown (selectedChanged) = "preAddHead($event,division)" (showAddButton) = "showAddButton($event,division)" [exclude]="division.leaders"></app-head-staff-dropdown>
+              <button class="btn btn-primary" *ngIf = "division.showAddButton" (click) = "addHead(division)">Add</button>
+            </td>
+            <td><button class="btn btn-primary" (click) = "remove(division)">X</button></td>
+          </tr>
+        </table>
+    </div>
     
-    <table class="table">
-      <tr>
-        <th>Name</th>
-        <th>Boys</th>
-        <th>Girls</th>
-        <th></th>
-      </tr>
-      <tr *ngFor="let division of divisions">
-        <td>{{division.name}}</td>
-        <td>{{division.gender}}</td>
-        <td></td>
-        <td><button class="btn btn-primary" (click) = "remove(division)">X</button></td>
-      </tr>
-    </table>
