--- a/client/src/app/components/register-camp/register-camp.component.html
+++ b/client/src/app/components/register-camp/register-camp.component.html
@@ -16,17 +16,22 @@
       <input class="form-control" type="text" name="name" formControlName="name" />
     </div>
   </div>
-
+  <div class="form-group">
+      <label for="admin_first">Admin First Name</label>
+      <div>
+        <input class="form-control" type="text" name="admin_first" formControlName="admin_first" />
+      </div>
+  </div>
+  <div class="form-group">
+      <label for="admin_last">Admin Last Name</label>
+      <div>
+        <input class="form-control" type="text" name="admin_last" formControlName="admin_last" />
+      </div>
+  </div>
   <div class="form-group">
     <label for="admin_email">Admin Email</label>
     <div>
       <input class="form-control" type="text" name="admin_email" formControlName="admin_email" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="admin_username">Admin Username</label>
-    <div>
-      <input class="form-control" type="text" name="admin_username" formControlName="admin_username" />
     </div>
   </div>
 
