--- a/client/src/app/components/head-staff/head-staff.component.html
+++ b/client/src/app/components/head-staff/head-staff.component.html
@@ -9,17 +9,22 @@
   </div>
 
   <form [formGroup]="form" (submit)="onRegistrationSubmit()">
-
+      <div class="form-group">
+        <label for="first">First</label>
+        <div>
+          <input class="form-control" type="text" name="first" formControlName="first" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="last">Last</label>
+        <div>
+          <input class="form-control" type="text" name="last" formControlName="last" />
+        </div>
+      </div>
     <div class="form-group">
       <label for="email">Email</label>
       <div>
         <input class="form-control" type="text" name="email" formControlName="email" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <div>
-        <input class="form-control" type="text" name="username" formControlName="username" />
       </div>
     </div>
     <div class="form-group">
@@ -35,21 +40,15 @@
 <button class="btn btn-primary" (click) = "showAdd()" *ngIf = "!newHead">Add</button>
 <table class="table">
     <tr>
-      <th>Username</th>
+      <th>First</th>
+      <th>Last</th>
       <th>Email</th>
-      <th>Division(s)</th>
       <th></th>
     </tr>
     <tr *ngFor="let head of heads">
-      <td>{{head._id.username}}</td>
-      <td>{{head._id.email}}</td>
-      <td *ngIf="head.divisions">
-        <p *ngFor="let division of head.divisions">{{division.name}}</p>
-      </td>
-      <td *ngIf="!head.divisions">
-        <app-divisions-dropdown (selectedChanged) = "preAdd($event,head)"></app-divisions-dropdown>
-        <button class="btn btn-primary" (click) = "addDivision(head)">Add</button>
-      </td>
+      <td>{{head.first}}</td>
+      <td>{{head.last}}</td>
+      <td>{{head.email}}</td>
       <td><button class="btn btn-primary" (click) = "remove(head)">X</button></td>
     </tr>
   </table>
