--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -54,9 +54,37 @@
       <input [disabled]="processing" class="btn btn-primary" type="submit" value="Register" />
       <input class="btn btn-primary" (click) = "cancelAdd()" value="Cancel Add" />
     </form>
+</div>
+
+<div *ngIf="bulkAdd">
+    <h2 class="page-header">Bulk Upload Counselor</h2>
+    
+    <!-- Custom Success/Error Message -->
+    <div class="row show-hide-message">
+      <div [ngClass]="messageClass">
+        {{ message }}
+      </div>
     </div>
     
+    <!-- Login Form -->
+    <form [formGroup]="bulkAddForm" (submit)="onBulkUploadSubmit()">
+    
+      <div class="form-group">
+        <label for="counselor_file">Counselor CSV File</label>
+        <div>
+          <input class="form-control" type="file" (change)="fileUploaded($event)" name="counselor_file" formControlName="counselor_file" />
+        </div>
+      </div>
+      <!-- Submit Button -->
+      <input class="btn btn-primary" type="submit" value="Upload" />
+      <input class="btn btn-primary" (click) = "cancelBulkAdd()" value="Cancel Add" />
+    </form>
+</div>
+
+    
     <button class="btn btn-primary" (click) = "showAdd()" *ngIf = "!newCamp && authService.admin()">Add</button>
+    
+    <button class="btn btn-primary" (click) = "showBulkAdd()" *ngIf = "!bulkAdd && authService.admin()">Upload Counselor CSV File</button>
     
     <table class="table" *ngIf="authService.admin()">
       <tr>
@@ -83,6 +111,7 @@
             <app-specialties-dropdown (selectedChanged) = "preAddSpecialty($event,counselor)"></app-specialties-dropdown>
             <button class="btn btn-primary" (click) = "addSpecialty(counselor)">Add</button>
         </td>
+        <td *ngIf="counselor.type!='specialist' && !counselor.specialty"></td>
         <td><button class="btn btn-primary" (click) = "remove(counselor)">X</button></td>
       </tr>
     </table>
