--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,7 @@
         <li *ngIf="authService.admin()||authService.isUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/counselors">Counselors</a></li>
         <li *ngIf="!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/login">Login</a></li>
         <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/dashboard">Dashboard</a></li>
+        <li *ngIf="authService.admin()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/options">Options</a></li>
         <li *ngIf="authService.loggedIn()"><a href="#" (click)="onLogoutClick()" >Logout</a></li>
       </ul>
   </div><!-- /.container-fluid -->
