--- a/client/src/app/components/options/options.component.html
+++ b/client/src/app/components/options/options.component.html
@@ -13,6 +13,33 @@
   <input class="btn btn-primary" type="submit" value="Submit" />
 </form>
 
+<h3>Head Staff Types</h3>
+<table class="table">
+  <tr>
+    <th>Type</th>
+    <th></th>
+  </tr>
+  <tr *ngFor="let type of options?.headStaff_types">
+    <td>{{type.type}}</td>
+    <td><button class="btn btn-primary" (click) = "removehType(type)">X</button></td>
+  </tr>
+</table>
+<div *ngIf="newhType">
+  <form [formGroup]="newhTypeForm" (submit)="onNewhTypeSubmit()">
+    <div class="form-group">
+      <label for="type">Name</label>
+      <div>
+        <input class="form-control" type="text" name="htype" formControlName="htype" />
+      </div>
+    </div>
+
+    <!-- Submit Button -->
+    <input class="btn btn-primary" type="submit" value="Register" />
+    <input class="btn btn-primary" (click) = "cancelhAdd()" value="Cancel Add" />
+  </form>
+</div>
+<button class="btn btn-primary" (click) = "showhAdd()" *ngIf = "!newType">Add</button>
+
 <h3>Counselor Types</h3>
 <table class="table">
   <tr>
@@ -39,3 +66,23 @@
   </form>
 </div>
 <button class="btn btn-primary" (click) = "showAdd()" *ngIf = "!newType">Add</button>
+
+<div *ngIf="campsService.hasModule('eval')">
+  <h2>Evaluation Options</h2>
+  <h3>Current Evaluation Period</h3>
+  <button class="btn btn-primary" [disabled]="options?.evaluationOpts.currentEval==1" (click)="decreasePeriod()">&lt;</button> 
+  {{options?.evaluationOpts.currentEval}} 
+  <button class="btn btn-primary" [disabled]="options?.evaluationOpts.currentEval==options?.evaluationOpts.perSession" (click)="increasePeriod()">&gt;</button>
+  <h3>Evaluations Per Session</h3>
+  <p>{{options?.evaluationOpts.perSession}}</p>
+  <form [formGroup]="perSessionForm" (submit)="onPerSessionSubmit()">
+    <div class="form-group">
+      <label for="per_session">New Evaluations Per Session Value</label>
+      <div>
+        <input class="form-control" type="number" name="per_session" formControlName="per_session" />
+      </div>
+    </div>
+    <!-- Submit Button -->
+    <input class="btn btn-primary" type="submit" value="Submit" />
+  </form>
+</div>
