counselor grabs for different head staff types

--- a/client/src/app/components/counselors/counselors.component.html
+++ b/client/src/app/components/counselors/counselors.component.html
@@ -148,7 +148,7 @@
             <td>{{counselor.last}}</td>
             <td>{{counselor.gender}}</td>
             <td>{{counselor.type.type}}</td>
-            <td>{{counselor.specialty}}</td>
+            <td>{{counselor.specialty?.name}}</td>
           </tr>
         </table>
       </div>
